@@ -91,30 +91,30 @@ echo "done!";
 --EXPECT--
 ========== not in manually transaction ==========
 auto commit ON from ON
-int(1)
+bool(true)
 Success
 
 auto commit OFF from ON
-int(0)
+bool(false)
 Success
 
 auto commit OFF from OFF
-int(0)
+bool(false)
 Success
 
 auto commit ON from OFF
-int(1)
+bool(true)
 Success
 
 ========== in manually transaction ==========
 begin transaction
 
 auto commit ON from ON, expect error
-int(1)
+bool(true)
 SQLSTATE[HY000]: General error: Cannot change autocommit mode while a transaction is already open
 
 auto commit OFF from ON, expect error
-int(1)
+bool(true)
 SQLSTATE[HY000]: General error: Cannot change autocommit mode while a transaction is already open
 
 end transaction
@@ -122,11 +122,11 @@ auto commit OFF
 begin transaction
 
 auto commit ON from OFF, expect error
-int(0)
+bool(false)
 SQLSTATE[HY000]: General error: Cannot change autocommit mode while a transaction is already open
 
 auto commit OFF from OFF, expect error
-int(0)
+bool(false)
 SQLSTATE[HY000]: General error: Cannot change autocommit mode while a transaction is already open
 
 end transaction
